--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,225 @@
+body {
+  --bg-color: #FFFFFF;
+  --bg-secondary-color: #E6E8EF;
+  --text-color: #535670;
+  --red-error: #D02F44;
+  --red-error-light: #E3828F;
+  --blue-light: #1E74EC;
+  --blue-dark: #012C88;
+  --blue-100: #03115F;
+  --blue-90: #35417F;
+  --blue-20: #CDCFDF;
+  --pink-100: #79077B;
+  --pink-80: #A960AB;
+  --gray-80: #75788D;
+  --gray-60: #989AA9;
+  --gray-20: #DDDDE2;
+  --gray-10: #EEEFF1;
+  --base-font-size: 18px;
+  --base-line-heignt: 22px;
+  --font-size-secondary: 20px;
+  --line-height-secondary:28px;
+  --font-family-secondary: "Inter", sans-serif;
+}
 
+html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  font-size: var(--base-font-size);
+  line-height: var(--base-line-heignt);
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
+
+.wrapper {
+  width: 100%;
+}
+
+.header {
+  background-color: black;
+  background-image: url(../img/main-hero-bg.png);
+  background-size: cover;
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+}
+
+.logo-block {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
+
+.logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 8px;
+}
+
+.logo__title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+  color: var(--gray-20);
+}
+
+.logo__description {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  color: var(--gray-60);
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+}
+
+.header-nav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+}
+.header-nav li {
+  list-style: none;
+}
+
+.header-controls:hover {
+  cursor: pointer;
+}
+
+.hero-btn, .nav-item::after, .nav-item {
+  transition: all 300ms ease;
+}
+
+.nav-item {
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: var(--gray-20);
+}
+
+.nav-item:hover {
+  color: var(--gray-10);
+}
+
+.nav-item::after {
+  content: "";
+  display: block;
+  position: relative;
+  top: 5px;
+  width: 0%;
+  background-color: var(--gray-10);
+  height: 1px;
+}
+
+.nav-item:hover::after {
+  width: 100%;
+}
+
+.header-controls {
+  display: flex;
+  flex-direction: row;
+  gap: 26px;
+  align-items: center;
+}
+
+h1 {
+  margin: 0;
+  padding-top: 157px;
+  font-family: var(--font-family-secondary);
+  font-size: 54px;
+  line-height: 64px;
+  letter-spacing: 0.02em;
+  color: var(--gray-10);
+}
+
+.hero__text {
+  padding-top: 24px;
+  padding-bottom: 60px;
+  font-size: 20px;
+  line-height: 28px;
+  color: var(--gray-20);
+}
+
+.hero-btn {
+  background: var(--blue-light);
+  padding: 14px 20px 14px 20px;
+  border: none;
+  outline: none;
+}
+.hero-btn:hover {
+  cursor: pointer;
+}
+.hero-btn:active {
+  transform: scale(95%);
+}
+
+.btn-blue {
+  color: var(--gray-10);
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+.experience-items__years {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 68px;
+  line-height: 82px;
+  text-transform: uppercase;
+  color: var(--gray-10);
+}
+
+.experience-items__text {
+  font-weight: 325;
+  font-size: 26px;
+  line-height: 32px;
+  color: var(--gray-10);
+}
+
+.hero__experience {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  gap: 40px;
+  justify-content: space-evenly;
+  padding-top: 136px;
+  padding-bottom: 176px;
+}
+
+.experience-items {
+  display: flex;
+  flex-direction: column;
+  color: var(--gray-10);
+}
+.experience-items__years {
+  align-self: center;
+}
 
 /*# sourceMappingURL=styles.css.map */
