--- a/scss/_main-page.scss
+++ b/scss/_main-page.scss
@@ -22,8 +22,8 @@ html, body {
 .container {
     max-width: 1440px;
     margin: 0 auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 header {
@@ -146,7 +146,6 @@ h1 {
 
 @mixin btnBlue() {
     background: var(--blue-light);
-    padding: 14px 20px 14px 20px;
     border: none;
     outline: none;
     @extend %transition;
@@ -161,6 +160,7 @@ h1 {
 }
 .hero-btn {
     @include btnBlue();
+    padding: 14px 40px 14px 40px;
 }
 
 .btn-blue {
@@ -178,14 +178,13 @@ h1 {
     font-size: 68px;
     line-height: 82px;
     text-transform: uppercase;
-    color: var(--gray-10);
 }
 
 %H4 {
     font-weight: 325;
     font-size: 26px;
     line-height: 32px;
-    color: var(--gray-10);
+    font-weight: 500;
 }
 
 .hero__experience {
@@ -207,10 +206,174 @@ h1 {
 
     &__years {
         @extend %H1L;
+        color: var(--gray-10);
         align-self: center
     }
 
     &__text {
         @extend %H4;
+        color: var(--gray-10);
     }
 }
+
+.about {
+    padding-top: 180px;
+    padding-bottom: 180px;
+}
+
+.section-title {
+    @extend %H4;
+    color: var(--blue-90);
+    padding-bottom: 24px;
+}
+
+.about-row {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.about__img img {
+    height: auto;
+    aspect-ratio: auto 947 / 640;
+
+}
+
+%H1-M {
+    font-size: 54px;
+    font-weight: 700;
+    line-height: 60px;
+    color: var(--blue-100);
+}
+
+.about__content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.about__title {
+    @extend %H1-M;
+}
+
+.about__text {
+    color: var(--gray-80);
+}
+
+.about__btns {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 24px;
+}
+
+@mixin btnContour() {
+    background-color: transparent;
+    border: 1px solid var(--blue-light);
+    @extend %transition;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    &:active {
+        transform: scale(95%);
+    }
+}
+
+.about-btn__contour {
+    @include btnContour();
+    padding: 14px 50px 14px 50px;
+}
+
+.btn-contour {
+    text-decoration: none;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--blue-light);
+}
+
+.about-btn__blue {
+    @include btnBlue();
+    padding: 14px 40px 14px 40px;
+}
+
+.section-title {
+    @extend %H4;
+    color: var(--blue-90);
+    padding-bottom: 24px;
+}
+
+.offers__title {
+    @extend %H1-M;
+    padding-bottom: 24px;
+}
+
+.offers__text {
+    padding-bottom: 64px;
+    font-size: var(--font-family-secondary);
+    line-height: var(--line-height-secondary);
+    color: var(--gray-80);
+}
+
+.dev-cycle {
+    padding-bottom: 64px;
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
+.cycle-item {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: flex-start;
+
+    &__title {
+        font-size: 26px;
+        font-weight: 325;
+        line-height: 32px;
+        color: var(--blue-dark);
+    }
+
+    &__text {
+        color: var(--gray-80);
+    }
+}
+
+.offers-btn-row {
+    padding-bottom: 180px;
+}
+
+.offers-btn-row {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    align-items: center;
+}
+
+.offers-btn {
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+
+.btn-all {
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 16px;
+    color: var(--pink-80);
+    @extend %transition;
+}
+
+.btn-all:hover {
+    color: var(--pink-100);
+}
+
+
