--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ nav {
   cursor: pointer;
 }
 
-.btn-all, .about-btn__blue, .about-btn__contour, .hero-btn, .nav-item::after, .nav-item {
+.portfolio-btns__blue, .portfolio-btns__contour, .btn-all, .about-btn__blue, .about-btn__contour, .hero-btn, .nav-item::after, .nav-item {
   transition: all 300ms ease;
 }
 
@@ -246,7 +246,7 @@ h1 {
   aspect-ratio: auto 947/640;
 }
 
-.offers__title, .about__title {
+.portfolio__title, .offers__title, .about__title {
   font-size: 54px;
   font-weight: 700;
   line-height: 60px;
@@ -272,7 +272,7 @@ h1 {
 
 .about-btn__contour {
   background-color: transparent;
-  border: 1px solid var(--blue-light);
+  border: 2px solid var(--blue-light);
   padding: 14px 50px 14px 50px;
 }
 .about-btn__contour:hover {
@@ -307,6 +307,10 @@ h1 {
 .section-title {
   color: var(--blue-90);
   padding-bottom: 24px;
+}
+
+.offers {
+  padding-bottom: 180px;
 }
 
 .offers__title {
@@ -347,10 +351,6 @@ h1 {
 }
 
 .offers-btn-row {
-  padding-bottom: 180px;
-}
-
-.offers-btn-row {
   display: flex;
   flex-direction: row;
   gap: 24px;
@@ -373,6 +373,108 @@ h1 {
 
 .btn-all:hover {
   color: var(--pink-100);
+}
+
+.portfolio {
+  background-color: var(--bg-secondary-color);
+  padding-bottom: 274px;
+}
+
+.portfolio-row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section-title--portfolio {
+  padding-top: 113px;
+}
+
+.portfolio__title {
+  padding-bottom: 24px;
+}
+
+.portfolio__text {
+  font-size: var(--font-size-secondary);
+  line-height: var(--line-height-secondary);
+  color: var(--gray-80);
+  text-align: center;
+}
+
+.portfolio-card-row {
+  position: relative;
+  bottom: 210px;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.portfolio-card {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+.portfolio-card__img img {
+  width: 100%;
+  height: auto;
+}
+.portfolio-card__link a {
+  text-decoration: none;
+  font-size: 22px;
+  line-height: 32px;
+  font-weight: 500;
+  color: var(--blue-100);
+}
+.portfolio-card__text {
+  color: var(--gray-80);
+}
+
+.portfolio-card-second {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 20px;
+  width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  position: relative;
+  top: -170px;
+}
+
+.portfolio-btns__contour {
+  background-color: transparent;
+  border: 2px solid var(--blue-light);
+  padding: 14px 50px 14px 50px;
+}
+.portfolio-btns__contour:hover {
+  cursor: pointer;
+}
+.portfolio-btns__contour:active {
+  transform: scale(95%);
+}
+
+.portfolio-btns__blue {
+  background: var(--blue-light);
+  border: none;
+  outline: none;
+  padding: 14px 40px 14px 40px;
+}
+.portfolio-btns__blue:hover {
+  cursor: pointer;
+}
+.portfolio-btns__blue:active {
+  transform: scale(95%);
+}
+
+.portfolio-btns {
+  position: relative;
+  top: -106px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 24px;
 }
 
 /*# sourceMappingURL=styles.css.map */
