--- a/scss/_main-page.scss
+++ b/scss/_main-page.scss
@@ -269,7 +269,7 @@ h1 {
 
 @mixin btnContour() {
     background-color: transparent;
-    border: 1px solid var(--blue-light);
+    border: 2px solid var(--blue-light);
     @extend %transition;
 
     &:hover {
@@ -304,6 +304,10 @@ h1 {
     @extend %H4;
     color: var(--blue-90);
     padding-bottom: 24px;
+}
+
+.offers {
+    padding-bottom: 180px
 }
 
 .offers__title {
@@ -347,10 +351,6 @@ h1 {
 }
 
 .offers-btn-row {
-    padding-bottom: 180px;
-}
-
-.offers-btn-row {
     display: flex;
     flex-direction: row;
     gap: 24px;
@@ -376,4 +376,93 @@ h1 {
     color: var(--pink-100);
 }
 
+.portfolio {
+    background-color: var(--bg-secondary-color);
+    padding-bottom: 274px;
+}
 
+.portfolio-row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.section-title--portfolio {
+    padding-top: 113px
+}
+
+.portfolio__title {
+    @extend %H1-M;
+    padding-bottom: 24px;
+}
+
+.portfolio__text {
+    font-size: var(--font-size-secondary);
+    line-height: var(--line-height-secondary);
+    color: var(--gray-80);
+    text-align: center;
+}
+
+.portfolio-card-row {
+    position: relative;
+    bottom: 210px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.portfolio-card {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    &__img img {
+        width: 100%;
+        height: auto;
+    }
+
+    &__link a {
+        text-decoration: none;
+        font-size: 22px;
+        line-height: 32px;
+        font-weight: 500;
+        color: var(--blue-100);
+    }
+
+    &__text {
+        color: var(--gray-80);
+    }
+}
+
+.portfolio-card-second {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+    width: 100%;
+    flex-wrap: wrap;
+    align-items: center;
+    position: relative;
+    top: -170px;
+}
+
+.portfolio-btns__contour {
+    @include btnContour();
+    padding: 14px 50px 14px 50px;
+}
+
+.portfolio-btns__blue {
+    @include btnBlue();
+    padding: 14px 40px 14px 40px;
+}
+
+.portfolio-btns {
+    position: relative;
+    top: -106px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 24px;
+}
