--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ h1 {
   aspect-ratio: auto 947/640;
 }
 
-.portfolio__title, .offers__title, .about__title {
+.advantages__title, .portfolio__title, .offers__title, .about__title {
   font-size: 54px;
   font-weight: 700;
   line-height: 60px;
@@ -475,6 +475,49 @@ h1 {
   flex-direction: row;
   justify-content: center;
   gap: 24px;
+}
+
+.advantages {
+  padding-top: 74px;
+  padding-bottom: 180px;
+}
+
+.advantages__title {
+  padding-bottom: 24px;
+}
+
+.advantages__text {
+  font-size: var(--font-size-secondary);
+  line-height: var(--line-height-secondary);
+  color: var(--gray-80);
+}
+
+.advantages-row {
+  padding-top: 54px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 40px;
+  width: 100%;
+}
+
+.advantages-item {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.advantages-item__img {
+  width: 100%;
+  height: auto;
+}
+.advantages-item__title {
+  font-size: var(--font-size-secondary);
+  line-height: 32px;
+  color: var(--blue-dark);
+  font-weight: 500;
+}
+.advantages-item__text {
+  color: var(--gray-80);
 }
 
 /*# sourceMappingURL=styles.css.map */
