--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ nav {
   cursor: pointer;
 }
 
-.portfolio-btns__blue, .portfolio-btns__contour, .btn-all, .about-btn__blue, .about-btn__contour, .hero-btn, .nav-item::after, .nav-item {
+.submit-btn__blue, .submit-block__link a, .input-aria textarea::placeholder, .input-aria textarea, .labeled-input-container input::placeholder, .labeled-input-container input, .contact-info__img svg, .portfolio-btns__blue, .portfolio-btns__contour, .btn-all, .about-btn__blue, .about-btn__contour, .hero-btn, .nav-item::after, .nav-item {
   transition: all 300ms ease;
 }
 
@@ -193,7 +193,7 @@ h1 {
   text-transform: uppercase;
 }
 
-.section-title, .experience-items__text {
+.contact-info__title, .contact-col__name, .section-title, .experience-items__text {
   font-weight: 325;
   font-size: 26px;
   line-height: 32px;
@@ -246,7 +246,7 @@ h1 {
   aspect-ratio: auto 947/640;
 }
 
-.clients-title, .advantages__title, .portfolio__title, .offers__title, .about__title {
+.conttact-col__title, .clients-title, .advantages__title, .portfolio__title, .offers__title, .about__title {
   font-size: 54px;
   font-weight: 700;
   line-height: 60px;
@@ -544,6 +544,240 @@ h1 {
   flex-wrap: wrap;
   width: 100%;
   align-items: center;
+}
+
+.contact-col {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.contact-preview {
+  background-image: url(../img/main-contact-bg.jpg);
+  background-size: cover;
+  padding-top: 110px;
+  padding-bottom: 267px;
+}
+
+.contact-col__name {
+  color: var(--gray-10);
+}
+
+.conttact-col__title {
+  color: var(--gray-10);
+}
+
+.contact-row {
+  position: relative;
+  bottom: 227px;
+  background-color: var(--gray-10);
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 110px;
+}
+
+.contact-info {
+  max-width: 578px;
+  padding: 64px 40px 51px 40px;
+  background-color: var(--blue-dark);
+}
+
+.contact-info__text {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  padding-top: 26px;
+}
+
+.contact-info__title {
+  color: var(--gray-20);
+}
+
+.form-block__text, .contact-info__desc {
+  font-size: 16px;
+  font-weight: 325;
+  line-height: 22px;
+}
+
+.russia-block__title, .slovenia-block__title {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  text-transform: uppercase;
+}
+
+.form-block__title {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 42px;
+}
+
+.submit-block__text, .text-required {
+  font-size: 11px;
+  line-height: 20px;
+}
+
+.contact-info__desc {
+  color: var(--gray-20);
+  border-bottom: 2px solid var(--gray-80);
+  padding-bottom: 24px;
+}
+
+.contact-info__contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 38px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.slovenia-block {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.slovenia-block__title {
+  color: var(--gray-20);
+}
+.slovenia-block__contact {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  color: var(--gray-10);
+}
+
+.russia-block {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.russia-block__title {
+  color: var(--gray-20);
+}
+.russia-block__contact {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  color: var(--gray-10);
+}
+
+.contact-info__social {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  border-top: 2px solid var(--gray-80);
+  padding-top: 40px;
+}
+
+.contact-info__img svg:hover {
+  transform: scale(115%);
+}
+
+.form-block__title {
+  color: var(--blue-100);
+}
+
+.form-block__text {
+  color: var(--gray-80);
+  padding-top: 26px;
+}
+
+.labeled-input-container {
+  position: relative;
+  padding-top: 15px;
+}
+
+.labeled-input-container input {
+  padding: 16px 238px 16px 16px;
+  border-radius: 4px;
+  border: none;
+  outline: none;
+}
+
+.labeled-input-container input::placeholder {
+  font-family: "Montserrat", sans-serif;
+  color: var(--gray-80);
+}
+
+.labeled-input-container input:focus {
+  outline: 1px solid var(--blue-light);
+}
+
+.labeled-input-container input:focus::placeholder {
+  font-size: 12px;
+  transform: translateY(-12px);
+}
+
+.input-aria {
+  padding-top: 15px;
+}
+
+.input-aria textarea {
+  padding: 16px 238px 62px 16px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+}
+
+.input-aria textarea::placeholder {
+  font-family: "Montserrat", sans-serif;
+  color: var(--gray-80);
+}
+
+.input-aria textarea:focus {
+  outline: 1px solid var(--blue-light);
+}
+
+.input-aria textarea:focus::placeholder {
+  font-size: 12px;
+  transform: translateY(-12px);
+}
+
+.text-required {
+  color: var(--gray-80);
+  padding-top: 16px;
+}
+
+.text-required-red {
+  color: var(--red-error);
+}
+
+.submit-block {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 4px;
+  gap: 10px;
+}
+.submit-block__text {
+  color: var(--gray-60);
+}
+.submit-block__link a {
+  color: var(--pink-80);
+}
+.submit-block__link a:hover {
+  color: var(--pink-100);
+}
+
+.submit-btn__blue {
+  background: var(--blue-light);
+  border: none;
+  outline: none;
+  padding: 14px 50px 14px 50px;
+  color: var(--gray-10);
+  font-size: 16px;
+  letter-spacing: 0.32px;
+}
+.submit-btn__blue:hover {
+  cursor: pointer;
+}
+.submit-btn__blue:active {
+  transform: scale(95%);
 }
 
 /*# sourceMappingURL=styles.css.map */
