--- a/scss/_main-page.scss
+++ b/scss/_main-page.scss
@@ -540,3 +540,256 @@ h1 {
     width: 100%;
     align-items: center;
 }
+
+.contact-col {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.contact-preview {
+    background-image: url(../img/main-contact-bg.jpg);
+    background-size: cover;
+    padding-top: 110px;
+    padding-bottom: 267px;
+}
+
+.contact-col__name {
+    @extend %H4;
+    color: var(--gray-10);
+}
+
+.conttact-col__title {
+    @extend %H1-M;
+    color: var(--gray-10);
+}
+
+.contact-row {
+    position: relative;
+    bottom: 227px;
+    background-color: var(--gray-10);
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 110px;
+}
+
+.contact-info {
+    max-width: 578px;
+    padding: 64px 40px 51px 40px;
+    background-color: var(--blue-dark);
+}
+
+.contact-info__text {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    padding-top: 26px;
+}
+
+.contact-info__title {
+    @extend %H4;
+    color: var(--gray-20);
+}
+
+%TXT-S {
+    font-size: 16px;
+    font-weight: 325;
+    line-height: 22px;
+}
+
+%H6 {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    text-transform: uppercase;
+}
+
+%H3 {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 42px;
+}
+
+%TXT-XS {
+    font-size: 11px;
+    line-height: 20px;
+}
+
+.contact-info__desc {
+    @extend %TXT-S;
+    color: var(--gray-20);
+    border-bottom: 2px solid var(--gray-80);
+    padding-bottom: 24px;
+}
+
+.contact-info__contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 38px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+.slovenia-block {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    &__title {
+        @extend %H6;
+        color: var(--gray-20);
+    }
+
+    &__contact {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+        color: var(--gray-10);
+    }
+}
+
+.russia-block {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    &__title {
+        @extend %H6;
+        color: var(--gray-20);
+    }
+
+    &__contact {
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+        color: var(--gray-10);
+    }
+}
+
+.contact-info__social {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    border-top: 2px solid var(--gray-80);
+    padding-top: 40px;
+}
+
+.contact-info__img svg {
+    @extend %transition;
+}
+
+.contact-info__img svg:hover {
+    transform: scale(115%)
+}
+
+.form-block__title {
+    @extend %H3;
+    color: var(--blue-100);
+}
+
+.form-block__text {
+    @extend %TXT-S;
+    color: var(--gray-80);
+    padding-top: 26px;
+}
+
+.labeled-input-container {
+    position: relative;
+    padding-top: 15px;
+}
+
+.labeled-input-container input {
+    padding: 16px 238px 16px 16px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    @extend %transition;
+}
+
+.labeled-input-container input::placeholder {
+    @extend %transition;
+    font-family: "Montserrat", sans-serif;
+    color: var(--gray-80);
+}
+
+.labeled-input-container input:focus {
+    outline: 1px solid var(--blue-light);
+}
+
+.labeled-input-container input:focus::placeholder { 
+    font-size: 12px;
+    transform: translateY(-12px);
+}
+
+.input-aria {
+    padding-top: 15px;
+}
+
+.input-aria textarea {
+    padding: 16px 238px 62px 16px;
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    @extend %transition;
+}
+
+.input-aria textarea::placeholder {
+    font-family: "Montserrat", sans-serif;
+    color: var(--gray-80);
+    @extend %transition;
+}
+
+.input-aria textarea:focus {
+    outline: 1px solid var(--blue-light);
+}
+
+.input-aria textarea:focus::placeholder { 
+    font-size: 12px;
+    transform: translateY(-12px);
+}
+
+.text-required {
+    @extend %TXT-XS;
+    color: var(--gray-80);
+    padding-top: 16px;
+}
+
+.text-required-red {
+    color: var(--red-error);
+}
+
+.submit-block {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 4px;
+    gap: 10px;
+
+    &__text {
+        @extend %TXT-XS;
+        color: var(--gray-60);
+    }
+
+    &__link a {
+        color: var(--pink-80);
+        @extend %transition;
+    }
+
+    &__link a:hover {
+        color: var(--pink-100);
+    }
+
+}
+
+.submit-btn__blue {
+    @include btnBlue();
+    padding: 14px 50px 14px 50px;
+    color: var(--gray-10);
+    font-size: 16px;
+    letter-spacing: 0.32px;
+}
