--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,7 @@ nav {
   cursor: pointer;
 }
 
-.submit-btn__blue, .submit-block__link a, .input-aria textarea::placeholder, .input-aria textarea, .labeled-input-container input::placeholder, .labeled-input-container input, .contact-info__img svg, .portfolio-btns__blue, .portfolio-btns__contour, .btn-all, .about-btn__blue, .about-btn__contour, .hero-btn, .nav-item::after, .nav-item {
+.submit-btn__blue, .submit-block__link a, .input-aria textarea::placeholder, .input-aria textarea, .labeled-input-container input::placeholder, .labeled-input-container input, .contact-info__img svg, .portfolio-btns__blue, .portfolio-btns__contour, .portfolio-card__img img, .btn-all, .about-btn__blue, .about-btn__contour, .hero-btn, .nav-item::after, .nav-item {
   transition: all 300ms ease;
 }
 
@@ -416,9 +416,15 @@ h1 {
   flex-direction: column;
   gap: 4px;
 }
+.portfolio-card__img {
+  overflow: hidden;
+}
 .portfolio-card__img img {
   width: 100%;
   height: auto;
+}
+.portfolio-card__img img:hover {
+  transform: scale(115%);
 }
 .portfolio-card__link a {
   text-decoration: none;
