--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,8 @@ nav {
   cursor: pointer;
 }
 
-.submit-btn__blue, .submit-block__link a, .input-aria textarea::placeholder, .input-aria textarea, .labeled-input-container input::placeholder, .labeled-input-container input, .contact-info__img svg, .portfolio-btns__blue, .portfolio-btns__contour, .portfolio-card__img img, .btn-all, .about-btn__blue, .about-btn__contour, .hero-btn, .nav-item::after, .nav-item {
+.confidentiality__link a,
+.cookies__policy a, .footer-additionally__link, .footer-nav__item, .submit-btn__blue, .submit-block__link a, .input-aria textarea::placeholder, .input-aria textarea, .labeled-input-container input::placeholder, .labeled-input-container input, .contact-info__img svg, .portfolio-btns__blue, .portfolio-btns__contour, .portfolio-card__img img, .btn-all, .about-btn__blue, .about-btn__contour, .hero-btn, .nav-item::after, .nav-item {
   transition: all 300ms ease;
 }
 
@@ -602,13 +603,13 @@ h1 {
   color: var(--gray-20);
 }
 
-.form-block__text, .contact-info__desc {
+.footer-additionally__dev, .slovenia-info__contact, .russia-info__contact, .form-block__text, .contact-info__desc {
   font-size: 16px;
   font-weight: 325;
   line-height: 22px;
 }
 
-.russia-block__title, .slovenia-block__title {
+.slovenia-info__title, .russia-info__title, .russia-block__title, .slovenia-block__title {
   font-size: 16px;
   font-weight: 700;
   line-height: 24px;
@@ -828,6 +829,117 @@ h1 {
 
 .accordion-tab--open .accordion-tab__full {
   max-height: 100vh;
+}
+
+.footer {
+  padding-top: 64px;
+  padding-bottom: 22px;
+  background-color: var(--blue-100);
+}
+
+.footer-block {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 156px;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.footer-block__info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1 1;
+}
+
+.russia-info__title {
+  color: var(--gray-10);
+}
+.russia-info__contact {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding-top: 16px;
+  color: var(--gray-10);
+}
+
+.slovenia-info__title {
+  color: var(--gray-10);
+}
+.slovenia-info__contact {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding-top: 16px;
+  color: var(--gray-10);
+}
+
+.footer-block__nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex: 1 1;
+  flex-wrap: wrap;
+}
+
+.footer-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 0;
+}
+.footer-nav li {
+  list-style-type: none;
+}
+.footer-nav__item {
+  text-decoration: none;
+  font-size: 16px;
+  line-height: normal;
+  letter-spacing: 0.32px;
+  text-transform: uppercase;
+  color: var(--gray-20);
+}
+.footer-nav__item:hover {
+  color: var(--gray-10);
+}
+
+.footer-additionally {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  padding-top: 72px;
+}
+.footer-additionally__dev {
+  color: var(--gray-10);
+}
+.footer-additionally__link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 32px;
+  padding-right: 270px;
+}
+.footer-additionally__link a:hover {
+  color: var(--gray-10);
+}
+
+.confidentiality__link {
+  border-right: 2px solid var(--gray-60);
+  padding-right: 32px;
+}
+
+.confidentiality__link a,
+.cookies__policy a {
+  color: var(--gray-20);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 16px;
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=styles.css.map */
