--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,8 @@ body {
     --bg-color: #FFFFFF;
     --bg-secondary-color: #E6E8EF;
     --text-color: #535670;
+    --black: #091245;
+    --white: #FFF;
     --red-error: #D02F44;
     --red-error-light: #E3828F;
     --blue-light: #1E74EC;
